--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <h1 class="w100 text-center"><a
-                <p>Club </p><p id="output"></p>
+                <p>Club TEST </p><p id="output"></p>
             </h1>
         </header>
         <div id="player2"></div>
