Site with Cool Colors and Spinning Cat
Just playing around with it.

--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>{{bigWord}}</title>
+        <title>The Hottest Club!</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Awesome videos!" />
@@ -10,11 +10,16 @@
     </head>
     <body>
         <header>
+            <div class="logo">
             <h1 class="w100 text-center"><a
                 <p>Club </p><p id="output"></p>
             </h1>
+            <div id="fancy">
+            </div>
         </header>
         <div id="player2"></div>
+
+    <img class="image" src="http://makeameme.org/media/templates/120/grumpy_cat.jpg" alt="" width="120" height="120">
 
         <!-- scripts -->
         <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
