--- a/test/index.html
+++ b/test/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>The Hottest Club!</title>
+        <title>Reload Radio</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Awesome videos!" />
+        <meta name="description" content="Randomly Generated Dance Club!" />
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
             <div class="logo">
-            <h1 class="w100 text-center"><a
-                <p>Club </p><p id="output"></p>
-            </h1>
-            <div id="fancy">
+                <h1 class="w100 text-center" id="fancy">
+                    <p>You Are Listening To&nbsp;</p><p id="output"></p><p>&nbsp;Radio.</p>
+                </h1>
             </div>
         </header>
         <div id="player2"></div>
-
-    <img class="image" src="http://makeameme.org/media/templates/120/grumpy_cat.jpg" alt="" width="120" height="120">
+        <div class="center">
+            <img class= "image1" id="sampleimage1" name="sampleimage1"/>
+        </div>
 
         <!-- scripts -->
         <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -27,4 +27,9 @@
         <script src="iframetest.html"></script>
         <script src="https://apis.google.com/js/client.js?onload=init"></script>
     </body>
-</html>
+    <div class="footer">
+        <div class="example1" id="fancy2">
+            <h3>Scrolling text... </h3>
+        </div>
+    </div>
+    </html>
