Updated Bugged End
End

--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
         <title>Reload Radio</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Randomly Generated Dance Club!" />
+        <meta name="description" content="Randomly Generated Radio!" />
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -29,7 +29,7 @@
     </body>
     <div class="footer">
         <div class="example1" id="fancy2">
-            <h3>Scrolling text... </h3>
+            <h3 id="currentTitle"></h3>
         </div>
     </div>
     </html>
